Melhorias nos textos e ajustes de responsividade

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Murilo Spinoza de Arruda</title>
-
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
@@ -27,9 +27,9 @@
 			<div id="google">
 				<img src="img/app/google.png">
 			</div>
-			<div id="sublime-text">
+			<!-- <div id="sublime-text">
 				<img src="img/app/sublime-text.png">
-			</div>
+			</div> -->
 			<!-- <div id="spotify">
 				<img src="img/app/spotify.png">
 			</div> -->
@@ -170,9 +170,9 @@
 					<h2>Conquista Pioneira</h2>
 
 					<p>A plataforma é composta por um conjunto de recursos desenvolvidos para os membros do Movimento Escoteiro, para controle da Progressão Pessoal do Ramo Pioneiro.</p>
-					<p>Criada por um pioneiro, para pioneiros, ela permite registrar informações sobre cada competência, exportar estes registros e relaciona os integrantes de um mesmo clã, possibilitando um aperfeiçoamento coletivo.</p>
+					<p>Ela permite registrar informações sobre cada competência, exportar estes registros e relaciona os integrantes de um mesmo clã, possibilitando um aperfeiçoamento coletivo.</p>
 
-					<p><em>Desenvolvi o aplicativo híbrido (Android e IOS) com Ionic 3, Typescript e Angular 4 e sua API em PHP. Também usei o conceito de PWA e gerei uma versão WEB</em></p>
+					<p><em>Foi desenvolvida utilizando Ionic 3, Typescript, Angular 4 e API em PHP. Com versões IOS, Android e WEB.</em></p>
 				</div>
 
 				<div class="folha" id="folha-2">
@@ -213,9 +213,3 @@
 		<script type="text/javascript" src="efeitos.js"></script>
 	</body>
 </html>
-
-
-
-
-
-
