Fiinalizando a status bar

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 		<div class="status-bar">
 			<p class="descricao">Murilo Spinoza de Arruda - Desktop Ubuntu</p>
-			<i>w</i>
-			<i>i</i>
-			<i>v</i>
+			<img src="img/icons/wifi.svg">
+			<i></i>
+			<img src="img/icons/volume.svg">
 			<p id="hora"></p>
-			<i>c</i>
+			<img src="img/icons/settings.svg">
 		</div>
 
 		<div id="tool-bar">
