--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<div class="status-bar">
-			<p class="descricao">Murilo Spinoza de Arruda - Desktop Ubuntu</p>
+			<p class="descricao">Murilo - Desktop Ubuntu</p>
 			<img src="img/icons/wifi.svg">
 			<i></i>
 			<img src="img/icons/volume.svg">
@@ -67,10 +67,10 @@
 
 			<div class="janela-conteudo">
 				<div class="folha">
-					<h1 class="text-center">Murilo Spinoza de Arruda</h1>
-					<p class="text-center">Brasileiro. Solteiro. Data de nascimento: 03/05/1998.</p>
-					<p class="text-center">Celular: (15) 99621-4471. Email: murilo_spinoza@hotmail.com</p>
-					<p class="text-center sm-text">R. Prof. Edemir Antônio Digiampietri, 206 - Júlio de Mesquita Filho, Sorocaba - SP. 18053-130</p>
+					<h1 class="text-center">Murilo Spinoza</h1>
+					<p class="text-center">Brasileiro. Solteiro. Data de nascimento: 01/12/1998.</p>
+					<p class="text-center">Celular: (15) 99876-5432. Email: murilo@email.com</p>
+					<p class="text-center sm-text">R. Prof. Chaves, 206 - Bairro Chapolim, Colorado - SP. 12123-123</p>
 
 					<h2>Resumo das Qualificações:</h2>
 					<ul>
